WIP DjangoCon workshop

--- a/notebooks/10-optimization-tips/queries.ipynb
+++ b/notebooks/10-optimization-tips/queries.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir(\"../..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,9 +136,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SQL Query:  SELECT \"books_person\".\"id\" FROM \"books_person\" LIMIT 10\n",
+      "PostgreSQL query:  {'sql': 'SELECT \"books_person\".\"id\" FROM \"books_person\" ORDER BY \"books_person\".\"id\" ASC LIMIT 1', 'time': '0.011'}\n",
+      "PostgreSQL explain analyze: Limit  (cost=0.29..0.55 rows=10 width=8) (actual time=0.073..0.086 rows=10 loops=1)\n",
+      "  ->  Index Only Scan using books_person_pkey on books_person  (cost=0.29..536.83 rows=20100 width=8) (actual time=0.072..0.083 rows=10 loops=1)\n",
+      "        Heap Fetches: 8\n",
+      "Planning Time: 0.233 ms\n",
+      "Execution Time: 0.112 ms\n"
+     ]
+    }
+   ],
    "source": [
     "reset_queries()\n",
     "\n",
@@ -135,6 +165,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -143,6 +174,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,9 +184,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<QuerySet ['100038_howardmichael@foster.com', '100049_anthony80@payne.com', '100141_williamsjames@powell.org', '100170_susan73@chapman.com', '100208_ochoi@white.com', '100233_keithtorres@hess.com', '100362_steven52@cole.com', '100365_geraldmitchell@hernandez.org', '100444_moorekristina@anthony.com', '100468_robert79@hendrix.com']>\n",
+      "PostgreSQL query:  SELECT \"books_person\".\"id\", \"books_person\".\"email\", \"books_person\".\"name\", \"books_person\".\"bio\" FROM \"books_person\" WHERE \"books_person\".\"email\" IN (SELECT U0.\"email\" FROM \"books_person\" U0 LIMIT 1000\n",
+      "PostgreSQL explain analyze:  Limit  (cost=1245.32..1253.02 rows=10 width=781) (actual time=43.214..43.353 rows=10 loops=1)\n",
+      "  ->  Nested Loop  (cost=1245.32..16709.54 rows=20100 width=781) (actual time=43.212..43.349 rows=10 loops=1)\n",
+      "        ->  HashAggregate  (cost=1245.04..1446.04 rows=20100 width=31) (actual time=43.152..43.159 rows=10 loops=1)\n",
+      "              Group Key: u0.email\n",
+      "              Batches: 1  Memory Usage: 2577kB\n",
+      "              ->  Limit  (cost=0.29..993.79 rows=20100 width=31) (actual time=0.023..29.450 rows=20100 loops=1)\n",
+      "                    ->  Index Only Scan using books_person_email_key on books_person u0  (cost=0.29..993.79 rows=20100 width=31) (actual time=0.022..27.195 rows=20100 loops=1)\n",
+      "                          Heap Fetches: 31\n",
+      "        ->  Index Scan using books_person_email_key on books_person  (cost=0.29..0.75 rows=1 width=781) (actual time=0.017..0.017 rows=1 loops=10)\n",
+      "              Index Cond: (email = u0.email)\n",
+      "Planning Time: 5.030 ms\n",
+      "Execution Time: 44.274 ms\n",
+      "Total time: 0.05s\n"
+     ]
+    }
+   ],
    "source": [
     "all_persons_qs = Person.objects.all()\n",
     "\n",
@@ -174,6 +228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -183,9 +238,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL query:  SELECT \"books_person\".\"id\", \"books_person\".\"email\", \"books_person\".\"name\", \"books_person\".\"bio\" FROM \"books_person\"\n",
+      "PostgreSQL explain analyze:  Limit  (cost=0.00..1.13 rows=10 width=781) (actual time=0.013..0.018 rows=10 loops=1)\n",
+      "  ->  Seq Scan on books_person  (cost=0.00..2265.00 rows=20100 width=781) (actual time=0.011..0.014 rows=10 loops=1)\n",
+      "Planning Time: 0.079 ms\n",
+      "Execution Time: 0.037 ms\n",
+      "Total time: 0.00s\n"
+     ]
+    }
+   ],
    "source": [
     "reset_queries()\n",
     "start_time = time.perf_counter()\n",
@@ -198,6 +266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -207,9 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL query:  SELECT \"books_person\".\"id\" FROM \"books_person\"\n",
+      "PostgreSQL explain analyze:  Limit  (cost=0.29..0.55 rows=10 width=8) (actual time=0.075..0.085 rows=10 loops=1)\n",
+      "  ->  Index Only Scan using books_person_pkey on books_person  (cost=0.29..536.83 rows=20100 width=8) (actual time=0.073..0.081 rows=10 loops=1)\n",
+      "        Heap Fetches: 8\n",
+      "Planning Time: 0.088 ms\n",
+      "Execution Time: 0.147 ms\n",
+      "Total time: 0.00s\n"
+     ]
+    }
+   ],
    "source": [
     "all_persons_qs = all_persons_qs.only(\"id\")\n",
     "\n",
@@ -224,6 +307,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,6 +333,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -282,6 +367,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,6 +402,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -350,6 +437,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,6 +465,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,6 +488,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -421,6 +511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -445,6 +536,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -473,6 +565,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -502,6 +595,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -530,6 +624,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -537,6 +632,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -568,6 +664,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -604,6 +701,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -652,6 +750,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -673,6 +772,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -703,9 +803,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Django Shell-Plus",
+   "display_name": "django-perfs-playground-tFy-cSse",
    "language": "python",
-   "name": "django_extensions"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -717,12 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "8fb15164adc20ecb760628bfa17a696b6e13a5a1c3d5688809e74f3367443e42"
-   }
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
